--- a/web/angular-wallet/src/app/main/dashboard/widgets/account-protection-warning/account-protection-warning.component.html
+++ b/web/angular-wallet/src/app/main/dashboard/widgets/account-protection-warning/account-protection-warning.component.html
@@ -1,6 +1,5 @@
 <ng-container *ngIf="status !== 2">
-  <div ngClass.gt-sm="p-16"
-       [ngStyle.xs]="{'padding':'0 !important'}"
+  <div [ngStyle.xs]="{'padding':'0 !important'}"
        class="wrapper"
   >
     <div class="widget fuse-navy-500-fg">
