--- a/web/angular-wallet/src/app/main/accounts/accounts.component.scss
+++ b/web/angular-wallet/src/app/main/accounts/accounts.component.scss
@@ -6,6 +6,13 @@
     color: black;
   }
 
+  mat-row {
+    &:hover {
+     background-color: rgba(0, 0, 0, 0.04);
+    }
+  }
+
+
   .action-row {
     justify-content: space-between;
     align-items: center;
