fix: fixed #1729 and #1730

--- a/web/angular-wallet/src/app/main/accounts/account-details/account-details.component.html
+++ b/web/angular-wallet/src/app/main/accounts/account-details/account-details.component.html
@@ -49,7 +49,7 @@
           <app-tokens-table
             [tokens]="tokens"
             [isLoading]="isLoadingTokens"
-            [showActions]="account.type === 'active'"
+            [account]="account"
           ></app-tokens-table>
         </mat-tab>
       </mat-tab-group>
