--- a/web/angular-wallet/src/app/main/tokens/tokens.component.html
+++ b/web/angular-wallet/src/app/main/tokens/tokens.component.html
@@ -2,6 +2,6 @@
   <app-tokens-table
     [tokens]="tokens"
     [isLoading]="isLoading"
-    [showActions]="selectedAccount.type !== 'offline'">
+    [account]="selectedAccount">
   </app-tokens-table>
 </app-page>
