--- a/web/angular-wallet/src/app/main/tokens/tokens-table/tokens-table.component.html
+++ b/web/angular-wallet/src/app/main/tokens/tokens-table/tokens-table.component.html
@@ -60,7 +60,7 @@
           <a (click)="openSignumSwap(token.id)">
             <mat-icon class="actions-icon" matTooltip="{{'asset_trade' | i18n}}">trending_up</mat-icon>
           </a>
-          <a [routerLink]="['/tokens/transfer', token.id]">
+          <a *ngIf="!account.isWatchOnly()" [routerLink]="['/tokens/transfer', token.id]">
             <mat-icon class="actions-icon" matTooltip="{{'asset_transfer' | i18n}}">publish</mat-icon>
           </a>
         </ng-container>
