fix: avatar on collapsed navbar in proportional circle for non-quadratic images

--- a/web/angular-wallet/src/app/layout/components/navbar/vertical/style-1/style-1.component.scss
+++ b/web/angular-wallet/src/app/layout/components/navbar/vertical/style-1/style-1.component.scss
@@ -75,7 +75,9 @@ fuse-sidebar {
                   position: relative;
                   top: -18px;
                   height: 42px;
+                  width: 42px;
                   border-radius: 50%;
+                  object-fit: cover;
                 }
               }
 
