--- a/web/angular-wallet/src/app/main/transactions/transaction-details/transaction-row-value-cell/transaction-row-value-cell.component.scss
+++ b/web/angular-wallet/src/app/main/transactions/transaction-details/transaction-row-value-cell/transaction-row-value-cell.component.scss
@@ -20,8 +20,10 @@
     margin: 4px 4px 0 0;
   }
 
-  .chip a {
+  .chip {
     color: #fff;
+    cursor: pointer;
+    text-transform: uppercase;
   }
 
   .chip-list {
@@ -32,5 +34,8 @@
     border: 1px solid lightgray;
     border-radius: 4px;
     padding: 0 4px 4px 4px;
+  }
+  .fetching {
+    animation: pulse 2s ease-in-out infinite;
   }
 }
