--- a/web/angular-wallet/src/app/layout/components/toolbar/account-selector-item/account-selector-item.component.html
+++ b/web/angular-wallet/src/app/layout/components/toolbar/account-selector-item/account-selector-item.component.html
@@ -3,10 +3,9 @@
         <img *ngIf="avatarImgSrc" [src]="avatarImgSrc" alt="avatar-image" />
       </div>
       <div class="address-box" fxHide fxShow.gt-xs>
-        <span>{{short(account.name || shortAddress)}}</span>
+        <span fxHide.gt-md>{{short(account.name || shortAddress)}}</span>
+        <span fxHide.sm>{{account.name || shortAddress}}</span>
         <div class="hint-line secondary-text">
-          <small *ngIf="account.name">{{short(shortAddress)}}</small>
-          <small *ngIf="!account.name">{{short(account.account)}}</small>
           <mat-icon *ngIf="account.isWatchOnly()"
                     class="s-12"
                     matTooltip="{{'hint_offline_account' | i18n}}">
@@ -27,6 +26,14 @@
                     matTooltip="{{'error_no_public_key' | i18n}}">
             lock_open
           </mat-icon>
+          <ng-container *ngIf="account.name">
+            <small fxHide.gt-md>{{short(shortAddress)}}</small>
+            <small fxHide.sm>{{shortAddress}}</small>
+          </ng-container>
+          <ng-container *ngIf="!account.name">
+            <small fxHide.gt-md>{{short(account.account)}}</small>
+            <small fxHide.sm>{{account.account}}</small>
+          </ng-container>
         </div>
       </div>
 </span>
