feat: updated signumjs to rc.56 and added clickable reference hash for transctions now

--- a/web/angular-wallet/src/app/main/transactions/transaction-details/transaction-row-value-cell/transaction-row-value-cell.component.html
+++ b/web/angular-wallet/src/app/main/transactions/transaction-details/transaction-row-value-cell/transaction-row-value-cell.component.html
@@ -32,6 +32,10 @@
     <a [routerLink]="['/blocks/block', value.data]">{{value.data}}</a>
   </div>
 
+  <div *ngSwitchCase="'ReferenceHash'">
+    <a [routerLink]="['/transactions/transaction', value.data]">{{value.data}}</a>
+  </div>
+
   <div *ngSwitchCase="'Asset'">
     <table>
       <tr>
